--- a/Opdracht een/index.css
+++ b/Opdracht een/index.css
@@ -138,3 +138,9 @@ body {
     max-width: 60%;
     height: auto;
 }
+footer {
+    text-align: center;
+    background-color: #4C5EAF;
+    color: white;
+    padding: 10px 0;
+}
