--- a/Opdracht een/Ervaring.css
+++ b/Opdracht een/Ervaring.css
@@ -50,12 +50,6 @@ body {
     align-items: center;
     margin: 20px 0;
 }
-.section twee {
-    display:flex;
-    align-items: center;
-    margin: 20px 0;
-    color: gray; 
-}
 .section img {
     max-width: 20%;
     margin-right: 20px;
@@ -65,4 +59,10 @@ body {
 .section p {
     font-size: 16px;
     color: #4C5EAF;
+}
+footer {
+    text-align: center;
+    background-color: #4C5EAF;
+    color: white;
+    padding: 10px 0;
 }
